overlays/uksouth-staging/default/binkweb-nginx/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binkweb-nginx
spec:
  template:
    spec:
      containers:
      - name: app
